2010-01-06  Onur Küçük <onur@pardus.org.tr>
	* bin/mudur.py: Check if mudur is in live environment from
	/var/run/pardus/livemedia
	* bin/mudur.py: Rename livecd config to live

2009-12-30  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (setSystemLanguage): Don't fail if /etc/env.d/03locale is
	missing.

2009-12-09  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (cleanupVar): Don't remove livemedia file as it will be
	used by our brand new, smart booting mechanism.

2009-11-22  Bahadır Kandemir <bahadir@pardus.org.tr>
	* service.py: Error message if service is missing

2009-11-09  Ozan Çağlayan <ozan@pardus.org.tr>
	* setup.py: Bump to 3.1.1.

2009-11-02  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (mountRootFileSystem): Revert mount -af with the old loop
	to fix /home mounts, separate swap activation.
	* bin/mudur.py (run_async): Fix possible NoneType error.
	* bin/mudur.py: Add support for starting preload daemon,
	* bin/mudur.py: Add methods for turning swap on/off,
	* bin/mudur.py: Add deprecated config option for testing future changes

2009-10-21  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (autoloadModules): Pass -b to modprobe to obey blacklist
	files,
	* bin/mudur.py (mtime): Use os.path.getmtime() instead of os.stat(),
	* bin/mudur.py (setHostname):
	- Use ternary if-else construction for better readability,
	* bin/mudur.py (startServices, stopServices): Don't leak D-Bus connection
	handles, close them.
	* bin/mudur.py: Fix some inverted logic if-else blocks,
	* bin/mudur.py (Config): Rename get_mount() to
	get_fstab_entry_with_mountpoint(),
	* bin/mudur.py (updateMtab): New function to update mtab entry for a given
	partition and clear existing mtab~ lock files (#10562),
	* bin/mudur.py (stopSystem): Use shutil.copy instead of forking 'cp',
	* bin/mudur.py (mountRootFileSystem): Call mount -af instead of calling
	mount -f for each partition in /etc/fstab,
	* bin/mudur.py (cleanupTmp): Call rm -rf once without extending each